Improve cart clearing and backend robustness